Bugfix - Prevent game over tip from going offscreen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@
     color:white;
     text-align: center;
     margin-top: 20px;
-    font-size: x-large;
+    font-size: large;
 }
 .achievement-list-item {
     margin-top: 20px;
@@ -78,7 +78,7 @@
 }
 
 #game-over-container {
-    margin-top: 35vh;
+    margin-top: 30vh;
 }
 
 .game-over-btns {
